fix some layout issues

--- a/src/resample_view/style.css
+++ b/src/resample_view/style.css
@@ -21,12 +21,6 @@
   float: right;
 }
 
-.resample .separator {
-  width: 100%;
-  height: 1px;
-  margin: 5px;
-  background-color: #666666;
-}
 
 .resample .border {
   width: 100%;
